--- a/src/pages/logout/logout.html
+++ b/src/pages/logout/logout.html
@@ -9,7 +9,7 @@
 
 
 <ion-content padding>
-  <h3>Log out of your GiftBox</h3>
+  <h3>Log out of your Workshop</h3>
 
   <button ion-button color="danger" (click)="logout()">Log out</button>
 </ion-content>
