--- a/src/pages/title/title.html
+++ b/src/pages/title/title.html
@@ -13,7 +13,7 @@
     <button ion-button color="danger" (click)="cancelTitle()">
       I can't do this right now
     </button>
-    <button ion-button (click)="submitTitle()">
+    <button ion-button [disabled]="!titleComplete()" (click)="submitTitle()">
       Submit
     </button>
   </p>
