--- a/src/pages/wrap/wrap.html
+++ b/src/pages/wrap/wrap.html
@@ -5,7 +5,12 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Tap on any of the following challenges that you wish to set for the receiver.</p>
+  <ng-container *ngIf="wrapComplete()">
+    <p>You've added enough challenges to wrap the gift. You can keep adding more, or return to editing other aspects of your gift now.</p>
+  </ng-container>
+  <ng-container *ngIf="!wrapComplete()">
+    <p>Tap on any of the following challenges that you wish to set for the receiver.</p>
+  </ng-container>
   <ion-list>
     <button ion-item *ngFor="let type of this.types" (click)="addChallenge(type.name)" [color]="typeAdded(type.name) ? 'secondary' : ''">
       <ion-icon [name]="type.getIcon()" item-left></ion-icon>
@@ -13,11 +18,14 @@
     </button>
   </ion-list>
   <p>
+    <ng-container *ngIf="wrapComplete()">
+      <button ion-button success (click)="pauseWrap()">Back to Gift</button>
+    </ng-container>
     <button ion-button color="danger" [disabled]="!wrapComplete()" (click)="cancelWrap()">
       Delete
     </button> 
     <button ion-button color="secondary" [disabled]="!wrapComplete()" (click)="submitWrap()">
-      Submit
+      Wrap the gift
     </button>
   </p>
 </ion-content>
