--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,7 +2,7 @@
   <ion-row class="logo-row">
     <ion-col></ion-col>
     <ion-col width-67>
-      <img src="http://placehold.it/300x200"/>
+      <img src="./assets/white-icon-circle-text.png"/>
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
@@ -32,5 +32,5 @@
 
     </form>
   </div>
-  <p class="version">Version 0.0.3</p>
+  <p class="version">Version 0.0.5</p>
 </ion-content>
