--- a/src/pages/objectwrap/objectwrap.html
+++ b/src/pages/objectwrap/objectwrap.html
@@ -11,6 +11,10 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-item>
+    <h2>Find an exhibit</h2>
+    <p>Which museum exhibit would you like to include in your gift?</p>
+  </ion-item>
   <ion-list>
     <ion-item>
       <ion-thumbnail item-start>
