--- a/src/pages/giftcard/giftcard.html
+++ b/src/pages/giftcard/giftcard.html
@@ -17,11 +17,11 @@
           <ion-textarea placeholder="Enter the gift card text" [(ngModel)]="giftcardText"></ion-textarea>
         </ion-item>
         <div>
-          <button ion-button color="danger" (click)="cancelGiftcard()">
-            I can't do this right now
-          </button>
           <button ion-button [disabled]="!giftcardTextComplete()" (click)="submitGiftcard()">
             Submit
+          </button>
+          <button ion-button color="danger" (click)="cancelGiftcard()">
+            Back
           </button>
         </div>
       </ion-card-content>
