--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,6 +1,6 @@
 <ion-header> 
   <ion-navbar>
-    <ion-title>The GIFT Platform</ion-title>
+    <ion-title>Making a Gift</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -20,12 +20,12 @@
     </ion-slide>
     <ion-slide>
       <h2>What is this app?</h2>
-      <div>This app lets you send a 'gift' to another user. Gifts in the GIFT Platform are packages of digital content that you create for another user to experience when they are in a particular situation, e.g. near a specific cultural artifact.</div>
-      <div>Using the GIFT Wrapper app you set up that situation, create the digital gift, and send it to the lucky recipient.</div>
+      <div>This app lets you make a gift for another user. The gifts are personal messages that you create for another user to experience when they have found particular exhibits in a museum.</div>
+      <div>Using this app you choose the exhibit, create the gift, and send it to the lucky recipient.</div>
     </ion-slide>
     <ion-slide>
       <h2>That's it!</h2>
-      <div>Press the button below to log in and see whether you have any gifts to unwrap.</div>
+      <div>Press the button below to log in and start making gifts.</div>
       <button ion-button (click)="finishIntro()">
         Log in
       </button>
