--- a/src/pages/title/title.html
+++ b/src/pages/title/title.html
@@ -1,18 +1,18 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>A new name</ion-title>
+    <ion-title>A New Name</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-row>
     <ion-card>
-      <img [src]="this.getObjectImage()"/>
+      <img [src]="this.getObjectImage()" />
       <ion-card-content>
         <ion-card-title>
           A new name
         </ion-card-title>
-        <div>If <em>you</em> could name the exhibit, what would it be?</div>
+        <div>If <em>you</em> could name this object what would you call it?</div>
         <ion-item class="titletext">
           <ion-textarea placeholder="Enter the name" [(ngModel)]="titleText"></ion-textarea>
         </ion-item>
