--- a/src/pages/logout/logout.html
+++ b/src/pages/logout/logout.html
@@ -19,10 +19,10 @@
     <ion-card (click)="logout()">
       <ion-card-content>
         <ion-card-title>
-          Log out?
+          Outro
         </ion-card-title>
         <div>
-          Tap here to log out of the Wrapper app.
+          Outro text. Tap here to log out of the Wrapper app.
         </div>
       </ion-card-content>
     </ion-card>
