--- a/src/pages/objectwrap/objectwrap.html
+++ b/src/pages/objectwrap/objectwrap.html
@@ -21,7 +21,7 @@
         <img src="http://placehold.it/100x100" />
       </ion-thumbnail>
       <h2>Add a new exhibit</h2>
-      <p>Add exhibit that isn't listed below.</p>
+      <p text-wrap>Add exhibit that isn't listed below.</p>
       <button ion-button clear item-end (click)="newObject()">Choose</button>
     </ion-item> 
     <ion-item *ngFor="let item of this.workshop.objects" [color]="objectSelected(item.id) ? 'secondary' : ''">
