--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -7,13 +7,17 @@
     <ion-col></ion-col>
   </ion-row>
   <div class="login-box">
-    <form (ngSubmit)="login()" #registerForm="ngForm">
+    <form (ngSubmit)="register()" #registerForm="ngForm">
       <ion-row>
         <ion-col>
           <ion-list inset>
 
             <ion-item>
               <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
+            </ion-item>
+
+            <ion-item>
+              <ion-input type="text" placeholder="Your name" name="name" [(ngModel)]="name" required></ion-input>
             </ion-item>
 
             <ion-item>
@@ -26,17 +30,10 @@
 
       <ion-row>
         <ion-col class="signup-col">
-          <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
+          <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Submit</button>
         </ion-col>
       </ion-row>
 
     </form>
-    
-    <ion-row>
-      <ion-col class="register-col">
-        <button ion-button class="submit-btn" full (click)="register()">I need to register</button>
-      </ion-col>
-    </ion-row>
   </div>
-  <p class="version">Version 0.0.8</p>
 </ion-content>
