--- a/src/pages/giftcard/giftcard.html
+++ b/src/pages/giftcard/giftcard.html
@@ -10,9 +10,9 @@
       <img src="./assets/card.jpg"/>
       <ion-card-content>
         <ion-card-title>
-          Write them a card
+          Write {{this.workshop.gift.receiverName}} a card
         </ion-card-title>
-        <div>The gift card will be the first thing the receiver sees, before they start unwrapping the gift.</div>
+        <div>Is it their birthday? Are you just thinking of them? What do you want to say to them before they get their gift?</div>
         <ion-item class="cardtext">
           <ion-textarea placeholder="Enter the gift card text" [(ngModel)]="giftcardText"></ion-textarea>
         </ion-item>
