--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,7 +21,7 @@
               <img src="./assets/familiar.jpg" />
             </ion-thumbnail>
             <h2 text-wrap>Someone I know</h2>
-            <p text-wrap>Any more text here?</p>
+            <p text-wrap>This could be a friend or family member, or someone else</p>
             <button ion-button clear item-end (click)="chooseFamiliar()">Choose</button>
           </ion-item>
           <ion-item text-wrap>
@@ -29,7 +29,7 @@
               <img src="./assets/stranger.jpg" />
             </ion-thumbnail>
             <h2 text-wrap>Someone unknown</h2>
-            <p text-wrap>Any more text here?</p>
+            <p text-wrap>This is for a visitor to the museum that you don't know, like someone you pass on the street</p>
             <button ion-button clear item-end (click)="chooseStranger()">Choose</button>
           </ion-item>
         </ion-list>
