--- a/src/pages/logout/logout.html
+++ b/src/pages/logout/logout.html
@@ -19,10 +19,10 @@
     <ion-card (click)="logout()">
       <ion-card-content>
         <ion-card-title>
-          Outro
+          Thank you
         </ion-card-title>
         <div>
-          Outro text. Tap here to log out of the Wrapper app.
+          Thank you for making a gift for {{this.receiverName}}. They will receive an email shortly with your gift in it, that they can see at Brighton Museum.
         </div>
       </ion-card-content>
     </ion-card>
