--- a/src/pages/title/title.html
+++ b/src/pages/title/title.html
@@ -12,7 +12,7 @@
         <ion-card-title>
           A new name
         </ion-card-title>
-        <div>If <em>you</em> could name this object what would you call it?</div>
+        <div>If <em>you</em> could name this object for {{this.workshop.gift.receiverName}} what would you call it?</div>
         <ion-item class="titletext">
           <ion-textarea placeholder="Enter the name" [(ngModel)]="titleText"></ion-textarea>
         </ion-item>
