--- a/src/pages/giftcard/giftcard.html
+++ b/src/pages/giftcard/giftcard.html
@@ -14,7 +14,7 @@
         </ion-card-title>
         <div>Is it their birthday? Are you just thinking of them? What do you want to say to them before they get their gift?</div>
         <ion-item class="cardtext">
-          <ion-textarea placeholder="Enter the gift card text" [(ngModel)]="giftcardText"></ion-textarea>
+          <ion-textarea placeholder="Enter the gift card text" spellcheck="true" [(ngModel)]="giftcardText"></ion-textarea>
         </ion-item>
         <div>
           <button ion-button [disabled]="!giftcardTextComplete()" (click)="submitGiftcard()">
